# runner-dashboard

./: .commitlintrc.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release-plz.toml  runner-mgr
.github/: CODEOWNERS
.github/workflows/: ci.yml  release-plz.yml  release.yml
docs/: README.md  commands.md  configuration.md  dashboard.md  examples.md  getting-started.md  installation.md  troubleshooting.md
src/: config.rs  github.rs  lib.rs  main.rs  runner.rs
src/metrics/: db.rs  mod.rs  models.rs
src/tui/: charts.rs  mod.rs  ui.rs
tests/: config_tests.rs  github_tests.rs  runner_tests.rs  scope_tests.rs
