[package]
name = "runner-mgr"
version = "0.2.3"
edition = "2021"
description = "CLI tool for managing GitHub Actions self-hosted runners with a TUI dashboard"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
anyhow = "1"
ratatui = "0.30"
crossterm = "0.29"
hostname = "0.4"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

[lints.rust]
warnings = "deny"
unused = { level = "deny", priority = -1 }
dead_code = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
